--- a/d19/index.html
+++ b/d19/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Section 001</title>
+	<title>The National Parks</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link href="../assets/css/main.css" rel="stylesheet" />
 </head>
@@ -10,7 +10,7 @@
 <div id="wrapper"><!-- Main -->
 <div id="main">
 <div class="inner"><!-- Header -->
-<header id="header"><font face="lucida sans unicode, lucida grande, sans-serif">Domains 19: The Modern Prometheus</font></header>
+<header id="header"><font face="lucida sans unicode, lucida grande, sans-serif">Learn about the National Parks in the United States</font></header>
 <!-- Banner -->
 
 <section id="banner">
