--- a/d19/response.html
+++ b/d19/response.html
@@ -1,9 +1,7 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
-	Section 001
-    Part of the Domains19 blog network at Domains 19.
-    https://stewartjohn.github.io/GoogleSheetsCMS/sec001/ | johnstewart@ou.edu
-
+	
+    National Parks Research
     Built using:
     Editorial by HTML5 UP
 	html5up.net | @ajlkn
@@ -11,7 +9,7 @@
 -->
 <html>
 	<head>
-		<title>Domains 19 Blog Post</title>
+		<title>National Parks Research</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -41,29 +39,6 @@
 
                     </div>
                 </div>
-
-        <div id="disqus_thread" style="width:80%; margin: auto"></div>
-
-		<!-- Scripts -->
-
-        <script>
-
-        /**
-        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-        var disqus_config = function () {
-        // this.page.url = PAGE_URL;  Replace PAGE_URL with your page's canonical URL variable
-        // this.page.identifier = PAGE_IDENTIFIER; Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://psychology1113.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-        })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
         <script src="../assets/js/jquery.min.js"></script>
         <script src="../assets/js/browser.min.js"></script>
