--- a/d19/response.html
+++ b/d19/response.html
@@ -21,7 +21,7 @@
 
                         <!-- Header -->
                             <header id="header">
-                                <a href="index.html" class="logo">Section <strong>001</strong></a>
+                                <a href="index.html" class="logo">National Parks Research</a>
                             </header>
 
                         <!-- Content -->
